[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Woong Ze Yi <woongzeyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
toml = "^0.10.2"
pymongo = {extras = ["srv"], version = "^3.12.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
